--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "expo-linear-gradient": "~12.1.2",
+    "react-native-svg": "13.4.0",
+    "expo-clipboard": "~4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
