--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
+    "expo-av": "~13.2.1",
+    "expo-camera": "~13.2.1",
     "expo-clipboard": "~4.1.2",
     "expo-constants": "~14.2.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.0.0",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "~2.9.0",
@@ -30,9 +33,8 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^10.0.0",
-    "lottie-react-native": "5.1.4",
-    "expo-camera": "~13.2.1",
-    "expo-av": "~13.2.1"
+    "react-native-video": "^5.2.1",
+    "expo-dev-client": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
