--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-camera": "~13.2.1",
     "expo-clipboard": "~4.1.2",
     "expo-constants": "~14.2.1",
+    "expo-dev-client": "~2.2.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.0.0",
@@ -31,10 +32,11 @@
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-shared-element": "^0.8.8",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
-    "expo-dev-client": "~2.2.1"
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
