--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-shared-element": "^0.8.8",
     "react-native-svg": "13.4.0",
