--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,14 @@
       "preview3": {
         "developmentClient": true
       },
-      "production": {}
+      "production": {
+        "android": {
+          "image": "latest"
+        },
+        "ios": {
+          "image": "latest"
+        }
+      }
     }
   }
   
