--- a/eas.json
+++ b/eas.json
@@ -15,7 +15,7 @@
       },
       "production": {
         "android": {
-          "image": "latest"
+          "buildType": "apk"
         },
         "ios": {
           "image": "latest"
