--- a/package.json
+++ b/package.json
@@ -9,38 +9,54 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^15.0.3",
+    "@lottiefiles/dotlottie-react": "0.6.5",
     "@pchmn/expo-material3-theme": "^1.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
-    "expo": "~48.0.18",
-    "expo-av": "~13.2.1",
-    "expo-camera": "~13.2.1",
-    "expo-clipboard": "~4.1.2",
-    "expo-constants": "~14.2.1",
-    "expo-dev-client": "~2.2.1",
-    "expo-linear-gradient": "~12.1.2",
-    "expo-linking": "~4.0.1",
-    "expo-router": "^1.0.0",
-    "expo-status-bar": "~1.4.4",
-    "lottie-react-native": "5.1.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
+    "@react-navigation/stack": "^7.0.0",
+    "expo": "^54.0.0",
+    "expo-camera": "~17.0.10",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.13",
+    "expo-dev-client": "~6.0.20",
+    "expo-font": "14.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-router": "~6.0.22",
+    "expo-status-bar": "~3.0.9",
+    "expo-video": "~3.0.15",
+    "lottie-react-native": "~7.3.1",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-animatable": "^1.3.3",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-shared-element": "^0.8.8",
-    "react-native-svg": "13.4.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
+    "react-native-web": "^0.21.0",
     "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-animatable",
+          "@pchmn/expo-material3-theme",
+          "react-native-vector-icons",
+          "react-navigation-shared-element"
+        ]
+      }
+    }
+  }
 }
