--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@ web-build/
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+
+# Native directories
+android/
+ios/
+
+# Build artifacts
+temp_build/
