--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "expo-linking": "~8.0.11",
     "expo-router": "~6.0.22",
     "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "expo-video": "~3.0.15",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
@@ -36,15 +37,16 @@
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-shared-element": "^0.8.8",
+    "react-native-share": "12.2.4",
     "react-native-svg": "15.12.1",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-video": "^5.2.1",
-    "react-native-web": "^0.21.0",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-native-view-shot": "4.0.3",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~19.1.10",
+    "eas-cli": "16.31.0",
+    "typescript": "~5.9.2"
   },
   "private": true,
   "expo": {
@@ -52,9 +54,7 @@
       "reactNativeDirectoryCheck": {
         "exclude": [
           "react-native-animatable",
-          "@pchmn/expo-material3-theme",
-          "react-native-vector-icons",
-          "react-navigation-shared-element"
+          "@pchmn/expo-material3-theme"
         ]
       }
     }
