--- a/app.json
+++ b/app.json
@@ -31,6 +31,7 @@
       "favicon": "./App/assets/favicon.png"
     },
     "plugins": [
+      "./plugins/withAndroidBuildGradle",
       [
         "expo-camera",
         {
