--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -36,15 +37,18 @@
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-shared-element": "^0.8.8",
+    "react-native-share": "12.2.4",
+    "react-native-shared-element": "github:IjzerenHein/react-native-shared-element#main",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-video": "^5.2.1",
+    "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
     "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "patch-package": "8.0.1"
   },
   "private": true,
   "expo": {
