Refactor navigation structure in App.js to use createNativeStackNavigator, replacing createSharedElementStackNavigator. Update screen navigation names and remove unused CCDetailScreen. Enhance Index.js with HomeCardList and integrate AsyncStorage for card management. Update app.json to enable new architecture and add expo-local-authentication. Clean up metro.config.js by removing unnecessary custom resolver. Update package dependencies for improved functionality.

--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "expo": {
+    "newArchEnabled": true,
     "name": "wallet-app",
     "slug": "wallet-app",
     "version": "1.0.0",
@@ -31,14 +32,20 @@
       "favicon": "./App/assets/favicon.png"
     },
     "plugins": [
-      "./plugins/withAndroidBuildGradle",
+      "./plugins/withKotlinJvmTarget",
       [
         "expo-camera",
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera."
         }
       ],
-      "expo-video"
+      "expo-video",
+      [
+        "expo-local-authentication",
+        {
+          "faceIDPermission": "Allow $(PRODUCT_NAME) to use Face ID to share cards securely."
+        }
+      ]
     ],
     "extra": {
       "eas": {
