--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lottiefiles/dotlottie-react": "0.6.5",
     "@pchmn/expo-material3-theme": "^1.3.1",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "7.10.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.0.0",
@@ -25,6 +26,7 @@
     "expo-font": "14.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-local-authentication": "~17.0.8",
     "expo-router": "~6.0.22",
     "expo-status-bar": "~3.0.9",
     "expo-video": "~3.0.15",
@@ -35,30 +37,33 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.9.1",
+    "react-native-reanimated": "~4.2.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-share": "12.2.4",
-    "react-native-shared-element": "github:IjzerenHein/react-native-shared-element#main",
     "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.0.0",
-    "react-native-video": "^5.2.1",
     "react-native-view-shot": "4.0.3",
     "react-native-web": "^0.21.0",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-native-worklets": "~0.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "patch-package": "8.0.1"
   },
   "private": true,
+  "reanimated": {
+    "staticFeatureFlags": {
+      "ENABLE_SHARED_ELEMENT_TRANSITIONS": true
+    }
+  },
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
         "exclude": [
           "react-native-animatable",
           "@pchmn/expo-material3-theme",
-          "react-native-vector-icons",
-          "react-navigation-shared-element"
+          "react-native-vector-icons"
         ]
       }
     }
